--- a/app/assets/stylesheets/test.css
+++ b/app/assets/stylesheets/test.css
@@ -23,6 +23,12 @@ html {
     left: 0;
 }
 
+.nav-active::before {
+    width: 100%; 
+    right: auto;
+    left: 0;
+}
+
 .services {
     transition: background-color 1000ms linear;
     cursor: pointer;
@@ -92,3 +98,52 @@ html {
     height: 200px;
     resize: none;
 }
+
+#menu__toggle {
+    opacity: 0;
+}
+  
+.menu__btn {
+    display: flex; 
+    align-items: center;
+    position: relative;
+    /* top: 20px;
+    right: 20px; */
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #8750f7;
+    transition: 0.3s;
+}
+.menu__btn > span::before {
+    content: '';
+    top: -8px;
+}
+.menu__btn > span::after {
+    content: '';
+    top: 8px;
+}
+#menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+}
+
+#menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+}
+
+#menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+  
