--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<main>
+<main data-controller='visibility'>
   <section class='hero flex mx-[10%] pt-[112px]'>
     <div class='story mt-36'>
       <span class='block text-4xl font-bold	mb-4'>
@@ -7,6 +7,9 @@
       <h1 class='text-6xl max-w-xl full-stack font-bold mb-4'>
         Full Stack Developer
       </h1>
+      <div class='w-[300px] h-[350px] sm:w-[450px] sm:h-[550px] ml-auto mr-auto flex items-center mt-14 block md:hidden'>
+        <%= image_tag("photo", class: 'rounded-3xl rotate-3 hover:rotate-0 transition duration-[300ms]') %>
+      </div>
       <p class='text-xl max-w-xl mb-12 font-light'>
         I break down complex user experinece
         problems to create integritiy focussed solutions that connect billions of people
@@ -29,8 +32,8 @@
         </ul>
       </div>
     </div>
-    <div class='photo ml-[10%]'>
-      <div class='w-[300px] h-[400px] lg:w-[450px] lg:h-[550px] flex items-center'>
+    <div class='photo ml-[10%] hidden md:block'>
+      <div class='w-[200px] h-[300px] md:w-[300px] md:h-[400px] lg:w-[450px] lg:h-[550px] flex items-center mt-14'>
         <%= image_tag("photo", class: 'rounded-3xl rotate-3 hover:rotate-0 transition duration-[300ms]') %>
       </div>
     </div>
@@ -40,7 +43,7 @@
       <span class='block mr-4 font-bold text-6xl text-[#8750f7]'>
         5+
       </span>
-      <span class='block flex text-lg items-center w-20 text-[#8750f7]'>
+      <span class='block flex max-sm:text-l text-lg items-center w-20 text-[#8750f7]'>
         Years of Experinece
       </span>
     </div>
@@ -56,10 +59,10 @@
 
   <section class='bg-[#f6f3fc] px-[10%] py-32 mt-14'>
     <div class='mx-auto	flex items-center flex-col max-w-[700px] text-center mb-8'>
-      <h2 class='text-5xl full-stack font-bold'>
+      <h2 class='text-5xl full-stack font-bold ' id='services'>
         My Quality Services
       </h2>
-      <p class='mt-4 text-lg flex items-center'>
+      <p class='mt-4 text-lg flex items-center invisible animate__animated animate__delay-1s'>
         I put your ideas and thus your wishes in the
         form
         of a unique web project that inspires you
@@ -67,37 +70,37 @@
       </p>
     </div>
     <div>
-      <div class='flex border-b-[1px] border-[#dddddd] services'>
-        <div class='flex items-center py-8 px-6 w-[40%]'>
+      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated animate__delay-1s'>
+        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>01</span>
-          <h3 class='text-[#8750f7] font-bold text-3xl'>Backend Development</h3>
+          <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Backend Development</h3>
         </div>
         <div class='flex items-center'>
-          <p class='px-24'>
+          <p class='px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-8'>
             I break down complex user experinece problems to create integritiy focussed
             solutions that connect billions of people
           </p>
         </div>
       </div>
-      <div class='flex border-b-[1px] border-[#dddddd] services'>
-        <div class='flex items-center py-8 px-6 w-[40%]'>
+      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated animate__delay-1s'>
+        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>02</span>
-          <h3 class='text-[#8750f7] font-bold text-3xl'>Frontend Development</h3>
+          <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Frontend Development</h3>
         </div>
         <div class='flex items-center'>
-          <p class='px-24'>
+          <p class='px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-8'>
             I break down complex user experinece problems to create integritiy focussed
             solutions that connect billions of people
           </p>
         </div>
       </div>
-      <div class='flex border-b-[1px] border-[#dddddd] services'>
-        <div class='flex items-center py-8 px-6 w-[40%]'>
+      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated animate__delay-1s'>
+        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>03</span>
-          <h3 class='text-[#8750f7] font-bold text-3xl'>Deployment & Infrastracture Setup</h3>
+          <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Deployment & Infrastracture Setup</h3>
         </div>
         <div class='flex items-center'>
-          <p class='px-24'>
+          <p class='px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-8'>
             I break down complex user experinece problems to create integritiy focussed
             solutions that connect billions of people
           </p>
@@ -106,54 +109,54 @@
     </div>
   </section>
   <section class='px-[10%] py-32'>
-    <div class='flex justify-between gap-x-6'>
+    <div class='flex justify-between gap-x-6 lg:flex-row flex-col'>
       <div class='exp flex flex-col'>
-        <div class='flex items-center justify-between px-6'>
+        <div class='flex items-center px-6 invisible animate__animated animate__delay-1s'>
           <div>
             <i class="fa-regular fa-2xl fa-thumbs-up text-[#8750f7]"></i>
           </div>
           <div class='ml-6'>
-            <h2 class='text-5xl full-stack font-bold w-[340px]'>My Experience</h2>
+            <h2 class='text-3xl sm:text-5xl full-stack font-bold sm:w-[340px] ' id='cv'>My Experience</h2>
           </div>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
           <span class='block text-[#8750f7] text-xl font-bold'>2022 - Present</span>
-          <h3 class='text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at Faria</h3>
+          <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at Faria</h3>
           <span class='block'>Remote, Portland</span>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
           <span class='block text-[#8750f7] text-xl font-bold'>2020 - 2022</span>
-          <h3 class='text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at SoftServe</h3>
+          <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at SoftServe</h3>
           <span class='block'>Remote, Lviv</span>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
           <span class='block text-[#8750f7] text-xl font-bold'>2019 - 2020</span>
-          <h3 class='text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at Leobit</h3>
+          <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at Leobit</h3>
           <span class='block'>Remote, Lviv</span>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
           <span class='block text-[#8750f7] text-xl font-bold'>2018 - 2019</span>
-          <h3 class='text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at SunScript</h3>
+          <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at SunScript</h3>
           <span class='block'>Remote, Lviv</span>
         </div>
       </div>
       <div class='flex flex-col'>
-        <div class='flex items-center px-6'>
+        <div class='flex items-center px-6 invisible animate__animated animate__delay-1s'>
           <div>
             <i class="fa-solid fa-graduation-cap fa-2xl text-[#8750f7]"></i>
           </div>
           <div class='ml-6'>
-            <h2 class='text-5xl full-stack font-bold'>Education</h2>
+            <h2 class='text-3xl sm:text-5xl full-stack font-bold'>Education</h2>
           </div>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center'>
+        <div class='h-[170px] sm:h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
           <span class='block text-[#8750f7] text-xl font-bold'>2018 - 2021</span>
-          <h3 class='text-2xl font-bold text-[#2a1454] w-[400px]'>National University of Lviv Polytechnic (Cyber Security)</h3>
+          <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] sm:w-[400px]'>National University of Lviv Polytechnic (Cyber Security)</h3>
           <span class='block'>Lviv</span>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
           <span class='block text-[#8750f7] text-xl font-bold'>2014 - 2018</span>
-          <h3 class='text-2xl font-bold text-[#2a1454] w-[400px]'>Mechanical College (Computer Since)</h3>
+          <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] sm:w-[400px]'>Mechanical College (Computer Since)</h3>
           <span class='block'>Lviv</span>
         </div>
       </div>
@@ -162,7 +165,7 @@
 
   <section class='bg-[#f6f3fc] px-[10%] py-32'>
     <div class='mx-auto	flex items-center flex-col max-w-[700px] text-center mb-8'>
-      <h2 class='text-5xl full-stack font-bold'>
+      <h2 class='text-5xl full-stack font-bold ' id='skills'>
         My Skills
       </h2>
       <p class='mt-4 text-lg flex items-center'>
@@ -172,32 +175,32 @@
         and you customers.
       </p>
     </div>
-    <div class='flex gap-6 justify-around flex-wrap	'>
-      <div class='flex flex-col w-40 items-center justify-center'> 
+    <div class='flex gap-6 justify-around flex-wrap'>
+      <div class='flex flex-col w-40 items-center justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
           <%= image_tag("react", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>React</p>
       </div>
-      <div class='flex flex-col w-40 items-center  justify-center'> 
+      <div class='flex flex-col w-40 items-center  justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
           <%= image_tag("js", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>JS</p>
       </div>
-      <div class='flex flex-col w-40 items-center  justify-center'> 
+      <div class='flex flex-col w-40 items-center  justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
           <%= image_tag("ruby", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>Ruby</p>
       </div>
-      <div class='flex flex-col w-40 items-center  justify-center'> 
+      <div class='flex flex-col w-40 items-center  justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
           <%= image_tag("ror", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>Ruby on Rails</p>
       </div>
-      <div class='flex flex-col w-40 items-center  justify-center'> 
+      <div class='flex flex-col w-40 items-center  justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
           <%= image_tag("postgresql", class: 'w-[60px] h-[60px]') %>
         </div>
@@ -208,8 +211,8 @@
 
   <section class='px-[10%] py-32'>
     <div class='flex flex-col lg:flex-row gap-x-5'>
-      <div>
-        <h2 class='text-5xl full-stack font-bold'>
+      <div class='invisible animate__animated'>
+        <h2 class='text-5xl full-stack font-bold ' id='reviews'>
           My Client's Stories
         </h2>
         <p class='mt-4 text-lg flex items-center'>
@@ -219,7 +222,7 @@
           and you customers.
         </p>
       </div>
-      <%= tag.div class: "swiper w-[320px] mt-8 lg:mt-0 z-[0!important]", data: {
+      <%= tag.div class: "swiper w-[320px] mt-8 lg:mt-0 z-[0!important] invisible animate__animated", data: {
         controller: "carousel",
         effect: 'cards',
         carousel_options_value: {
@@ -318,15 +321,15 @@
     </div>
   </section>
   <section class='px-[10%] py-32 bg-[#f6f3fc]'>
-    <div class='flex flex-col lg:flex-row gap-x-5'>
-      <div class='form bg-white p-6 rounded-2xl'>
-        <h2 class='text-5xl full-stack font-bold h-[51px]'>
+    <div class='flex flex-col lg:flex-row lg:justify-around'>
+      <div class='form bg-white p-6 rounded-2xl mr-0 lg:mr-8 invisible animate__animated'>
+        <h2 class='text-5xl full-stack font-bold h-[51px] ' id='contact'>
           Let’s work together!
         </h2>
-        <p class='mt-4 text-lg w-[550px]'>
+        <p class='mt-4 text-lg md:w-[550px]'>
           I design and code beautifully simple things and i love what i do. Just simple like that!
         </p>
-        <%= form_tag('/123', { data: { controller: "contact-form", action: 'contact-form#sendData:prevent' } }) do |f| %>
+        <%= form_tag('', { data: { controller: "contact-form", action: 'contact-form#sendData:prevent' } }) do |f| %>
           <div class='flex gap-x-5 my-4'>
             <%= text_field nil, :first_name, class: 'form-input', placeholder: 'First name'%>
             <%= text_field nil, :last_name, class: 'form-input', placeholder: 'Last name'%>
@@ -341,7 +344,29 @@
           <%= button_tag('Send Message', class: 'w-36 contact-me text-white h-12 rounded-full flex items-center justify-center') %>
         <% end %>
       </div>
-      <div class='contact'>
+      <div class='flex items-center justify-center lg:mt-0 mt-8 invisible animate__animated'>
+        <div class=''>
+          <div class='flex gap-x-5 mb-8'>
+            <div class='rounded-full bg-[#8750f7] xl:min-w-[50px] xl:h-[50px] md:max-lg:min-w-[50px] md:max-lg:h-[50px] min-w-[30px] h-[30px] flex items-center justify-center'>
+              <svg fill="#ffffff" height="20px" width="20px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path id="Mail" d="M58.0034485,8H5.9965506c-3.3136795,0-5.9999995,2.6862001-5.9999995,6v36c0,3.3137016,2.6863203,6,5.9999995,6 h52.006897c3.3137016,0,6-2.6862984,6-6V14C64.0034485,10.6862001,61.3171501,8,58.0034485,8z M62.0034485,49.1108017 L43.084549,30.1919994l18.9188995-12.0555992V49.1108017z M5.9965506,10h52.006897c2.2056007,0,4,1.7943001,4,4v1.7664003 L34.4677505,33.3134003c-1.4902,0.9492989-3.3935013,0.9199982-4.8495998-0.0703011L1.9965508,14.4694996V14 C1.9965508,11.7943001,3.7910507,10,5.9965506,10z M1.9965508,16.8852005L21.182251,29.9251003L1.9965508,49.1108017V16.8852005z M58.0034485,54H5.9965506c-1.6473999,0-3.0638998-1.0021019-3.6760998-2.4278984l20.5199013-20.5200024l5.6547985,3.843401 c1.0859013,0.7383003,2.3418007,1.1083984,3.5995998,1.1083984c1.1953011,0,2.3925018-0.3339996,3.4463005-1.0048981 l5.8423996-3.7230015l20.2961006,20.2961025C61.0673485,52.9978981,59.6508713,54,58.0034485,54z"></path> </g></svg>
+            </div>
+            <div class='flex flex-col justify-center'>
+              <p>Email</p>
+              <a class='text-sm xl:text-xl md:max-lg:text-xl' href='mailto:maix.ukrnet@gmail.com'>maix.ukrnet@gmail.com</a>
+            </div>
+          </div>
+          <div class='flex gap-x-5'>
+            <div class='rounded-full bg-[#8750f7] xl:min-w-[50px] xl:h-[50px] md:max-lg:min-w-[50px] md:max-lg:h-[50px] min-w-[30px] h-[30px] flex items-center justify-center'>
+              <svg xmlns="http://www.w3.org/2000/svg" class='xl:w-[30px] xl:h-[30px] w-[20px] h-[20px]' x="0px" y="0px" width="20px" height="20px" viewBox="0,0,256,256">
+                <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M5,3c-1.105,0 -2,0.895 -2,2v14c0,1.105 0.895,2 2,2h14c1.105,0 2,-0.895 2,-2v-14c0,-1.105 -0.895,-2 -2,-2zM5,5h14v14h-14zM7.7793,6.31641c-0.857,0 -1.37109,0.51517 -1.37109,1.20117c0,0.686 0.51416,1.19922 1.28516,1.19922c0.857,0 1.37109,-0.51322 1.37109,-1.19922c0,-0.686 -0.51416,-1.20117 -1.28516,-1.20117zM6.47656,10v7h2.52344v-7zM11.08203,10v7h2.52344v-3.82617c0,-1.139 0.81264,-1.30273 1.05664,-1.30273c0.244,0 0.89649,0.24473 0.89649,1.30273v3.82617h2.44141v-3.82617c0,-2.197 -0.97627,-3.17383 -2.19727,-3.17383c-1.221,0 -1.87226,0.40656 -2.19726,0.97656v-0.97656z"></path></g></g>
+              </svg>
+            </div>
+            <div class='flex flex-col justify-center'>
+              <p>Linkedin</p>
+              <a class='text-sm xl:text-xl md:max-lg:text-xl' href='https://www.linkedin.com/in/maksym-herasevych/'>https://www.linkedin.com/in/maksym-herasevych</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
