--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
         Full Stack Developer
       </h1>
       <div class='w-[300px] h-[350px] sm:w-[450px] sm:h-[550px] ml-auto mr-auto flex items-center mt-14 block md:hidden'>
-        <%= image_tag("photo", class: 'rounded-3xl rotate-3 hover:rotate-0 transition duration-[300ms]') %>
+        <%= image_tag("photo.jpeg", class: 'rounded-3xl rotate-3 hover:rotate-0 transition duration-[300ms]') %>
       </div>
       <p class='text-xl max-w-xl mb-12 font-light'>
         I break down complex user experinece
@@ -34,7 +34,7 @@
     </div>
     <div class='photo ml-[10%] hidden md:block'>
       <div class='w-[200px] h-[300px] md:w-[300px] md:h-[400px] lg:w-[450px] lg:h-[550px] flex items-center mt-14'>
-        <%= image_tag("photo", class: 'rounded-3xl rotate-3 hover:rotate-0 transition duration-[300ms]') %>
+        <%= image_tag("photo.jpeg", class: 'rounded-3xl rotate-3 hover:rotate-0 transition duration-[300ms]') %>
       </div>
     </div>
   </section>
@@ -178,31 +178,31 @@
     <div class='flex gap-6 justify-around flex-wrap'>
       <div class='flex flex-col w-40 items-center justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
-          <%= image_tag("react", class: 'w-[60px] h-[60px]') %>
+          <%= image_tag("react.svg", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>React</p>
       </div>
       <div class='flex flex-col w-40 items-center  justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
-          <%= image_tag("js", class: 'w-[60px] h-[60px]') %>
+          <%= image_tag("js.svg", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>JS</p>
       </div>
       <div class='flex flex-col w-40 items-center  justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
-          <%= image_tag("ruby", class: 'w-[60px] h-[60px]') %>
+          <%= image_tag("ruby.svg", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>Ruby</p>
       </div>
       <div class='flex flex-col w-40 items-center  justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
-          <%= image_tag("ror", class: 'w-[60px] h-[60px]') %>
+          <%= image_tag("ror.svg", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>Ruby on Rails</p>
       </div>
       <div class='flex flex-col w-40 items-center  justify-center invisible animate__animated'> 
         <div class='w-40 rounded-3xl bg-white flex justify-center items-center h-44 grayscale-[90%] hover:grayscale-[0%]'>
-          <%= image_tag("postgresql", class: 'w-[60px] h-[60px]') %>
+          <%= image_tag("postgresql.svg", class: 'w-[60px] h-[60px]') %>
         </div>
         <p class='text-[#8750f7] mt-6'>PostgreSQL</p>
       </div>
@@ -243,7 +243,7 @@
             <div class='flex justify-center items-center h-full'>
               <div class='p-6 bg-[#f6f3fc] rounded-2xl h-full'>
                 <div class='flex justify-end'>
-                  <%= image_tag('luke', class: 'ml-auto w-[40%] rounded-tl-[5px] rounded-tr-[5px] rounded-br-[5px] rounded-bl-[125px]')%>
+                  <%= image_tag('luke.jpeg', class: 'ml-auto w-[40%] rounded-tl-[5px] rounded-tr-[5px] rounded-br-[5px] rounded-bl-[125px]')%>
                 </div>
                 <div class='flex pb-8'>
                   <svg class='-rotate-45 color-[#8750f7]' width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -281,7 +281,7 @@
             <div class='flex justify-center items-center h-full'>
               <div class='p-6 bg-[#f6f3fc] rounded-2xl h-full'>
                 <div class='flex justify-end'>
-                  <%= image_tag('padraic', class: 'ml-auto w-[40%] rounded-tl-[5px] rounded-tr-[5px] rounded-br-[5px] rounded-bl-[125px]')%>
+                  <%= image_tag('padraic.jpeg', class: 'ml-auto w-[40%] rounded-tl-[5px] rounded-tr-[5px] rounded-br-[5px] rounded-bl-[125px]')%>
                 </div>
                 <div class='flex pb-8'>
                   <svg class='-rotate-45 color-[#8750f7]' width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
