--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class='mx-[5%] sm:mx-[10%] h-full flex items-center'>
     <div class='flex items-center'>
       <div class='sm:mr-9'>
-        <%= image_tag('gmail', class: 'w-[60px] h-[60px]')%>
+        <%= image_tag('gmail.png', class: 'w-[60px] h-[60px]')%>
       </div>
       <a href='mailto:maix.ukrnet@gmail.com' class='hidden lg:block text-[#2a1454]'>maix.ukrnet@gmail.com</a>
     </div>
