--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <main data-controller='visibility'>
   <section class='hero flex mx-[10%] pt-[112px]'>
     <div class='story mt-36'>
-      <span class='block text-4xl font-bold	mb-4'>
+      <span class='block text-4xl font-bold	mb-4 text-[#2a1454]'>
         I am Maks
       </span>
       <h1 class='text-6xl max-w-xl full-stack font-bold mb-4'>
@@ -11,7 +11,7 @@
         <%= image_tag("photo.jpeg", class: 'rounded-3xl rotate-3 hover:rotate-0 transition duration-[300ms]') %>
       </div>
       <p class='text-xl max-w-xl mb-12 font-light'>
-        I break down complex user experinece
+        I break down complex user experience
         problems to create integritiy focussed solutions that connect billions of people
       </p>
       <div class='socials'>
@@ -59,10 +59,10 @@
 
   <section class='bg-[#f6f3fc] px-[10%] py-32 mt-14'>
     <div class='mx-auto	flex items-center flex-col max-w-[700px] text-center mb-8'>
-      <h2 class='text-5xl full-stack font-bold ' id='services'>
+      <h2 class='text-5xl full-stack font-bold leading-tight' id='services'>
         My Quality Services
       </h2>
-      <p class='mt-4 text-lg flex items-center invisible animate__animated animate__delay-1s'>
+      <p class='mt-4 text-lg flex items-center invisible animate__animated'>
         I put your ideas and thus your wishes in the
         form
         of a unique web project that inspires you
@@ -70,7 +70,7 @@
       </p>
     </div>
     <div>
-      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated animate__delay-1s'>
+      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated'>
         <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>01</span>
           <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Backend Development</h3>
@@ -82,7 +82,7 @@
           </p>
         </div>
       </div>
-      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated animate__delay-1s'>
+      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated'>
         <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>02</span>
           <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Frontend Development</h3>
@@ -94,7 +94,7 @@
           </p>
         </div>
       </div>
-      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated animate__delay-1s'>
+      <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated'>
         <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>03</span>
           <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Deployment & Infrastracture Setup</h3>
@@ -111,50 +111,50 @@
   <section class='px-[10%] py-32'>
     <div class='flex justify-between gap-x-6 lg:flex-row flex-col'>
       <div class='exp flex flex-col'>
-        <div class='flex items-center px-6 invisible animate__animated animate__delay-1s'>
+        <div class='flex items-center px-6 invisible animate__animated'>
           <div>
             <i class="fa-regular fa-2xl fa-thumbs-up text-[#8750f7]"></i>
           </div>
           <div class='ml-6'>
-            <h2 class='text-3xl sm:text-5xl full-stack font-bold sm:w-[340px] ' id='cv'>My Experience</h2>
+            <h2 class='text-3xl sm:text-5xl full-stack font-bold sm:w-[340px] !leading-tight' id='cv'>My Experience</h2>
           </div>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated'>
           <span class='block text-[#8750f7] text-xl font-bold'>2022 - Present</span>
           <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at Faria</h3>
           <span class='block'>Remote, Portland</span>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated'>
           <span class='block text-[#8750f7] text-xl font-bold'>2020 - 2022</span>
           <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at SoftServe</h3>
           <span class='block'>Remote, Lviv</span>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated'>
           <span class='block text-[#8750f7] text-xl font-bold'>2019 - 2020</span>
           <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at Leobit</h3>
           <span class='block'>Remote, Lviv</span>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated'>
           <span class='block text-[#8750f7] text-xl font-bold'>2018 - 2019</span>
           <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] w-[300px]'>Full Stack Ruby on Rails Engineer at SunScript</h3>
           <span class='block'>Remote, Lviv</span>
         </div>
       </div>
       <div class='flex flex-col'>
-        <div class='flex items-center px-6 invisible animate__animated animate__delay-1s'>
+        <div class='flex items-center px-6 invisible animate__animated'>
           <div>
             <i class="fa-solid fa-graduation-cap fa-2xl text-[#8750f7]"></i>
           </div>
           <div class='ml-6'>
-            <h2 class='text-3xl sm:text-5xl full-stack font-bold'>Education</h2>
+            <h2 class='text-3xl sm:text-5xl full-stack font-bold leading-tight !leading-tight'>Education</h2>
           </div>
         </div>
-        <div class='h-[170px] sm:h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
+        <div class='h-[170px] sm:h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated'>
           <span class='block text-[#8750f7] text-xl font-bold'>2018 - 2021</span>
           <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] sm:w-[400px]'>National University of Lviv Polytechnic (Cyber Security)</h3>
           <span class='block'>Lviv</span>
         </div>
-        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated animate__delay-1s'>
+        <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated'>
           <span class='block text-[#8750f7] text-xl font-bold'>2014 - 2018</span>
           <h3 class='text-xl sm:text-2xl font-bold text-[#2a1454] sm:w-[400px]'>Mechanical College (Computer Since)</h3>
           <span class='block'>Lviv</span>
@@ -165,7 +165,7 @@
 
   <section class='bg-[#f6f3fc] px-[10%] py-32'>
     <div class='mx-auto	flex items-center flex-col max-w-[700px] text-center mb-8'>
-      <h2 class='text-5xl full-stack font-bold ' id='skills'>
+      <h2 class='text-5xl full-stack font-bold !leading-tight' id='skills'>
         My Skills
       </h2>
       <p class='mt-4 text-lg flex items-center'>
@@ -212,7 +212,7 @@
   <section class='px-[10%] py-32'>
     <div class='flex flex-col lg:flex-row gap-x-5'>
       <div class='invisible animate__animated'>
-        <h2 class='text-5xl full-stack font-bold ' id='reviews'>
+        <h2 class='text-5xl full-stack font-bold !leading-tight' id='reviews'>
           My Client's Stories
         </h2>
         <p class='mt-4 text-lg flex items-center'>
@@ -225,6 +225,8 @@
       <%= tag.div class: "swiper w-[320px] mt-8 lg:mt-0 z-[0!important] invisible animate__animated", data: {
         controller: "carousel",
         effect: 'cards',
+        slidesPerView: 1,
+        spaceBetween: 10,
         carousel_options_value: {
           pagination: {
             el: ".swiper-pagination"
@@ -322,27 +324,43 @@
   </section>
   <section class='px-[10%] py-32 bg-[#f6f3fc]'>
     <div class='flex flex-col lg:flex-row lg:justify-around'>
-      <div class='form bg-white p-6 rounded-2xl mr-0 lg:mr-8 invisible animate__animated'>
-        <h2 class='text-5xl full-stack font-bold h-[51px] ' id='contact'>
-          Let’s work together!
-        </h2>
-        <p class='mt-4 text-lg md:w-[550px]'>
-          I design and code beautifully simple things and i love what i do. Just simple like that!
-        </p>
-        <%= form_tag('', { data: { controller: "contact-form", action: 'contact-form#sendData:prevent' } }) do |f| %>
-          <div class='flex gap-x-5 my-4'>
-            <%= text_field nil, :first_name, class: 'form-input', placeholder: 'First name'%>
-            <%= text_field nil, :last_name, class: 'form-input', placeholder: 'Last name'%>
-          </div>
-          <div class='flex gap-x-5 mb-4'>
-            <%= text_field nil, :email, class: 'form-input', placeholder: 'Email address'%>
-            <%= text_field nil, :phone_number, class: 'form-input', placeholder: 'Phone number'%>
-          </div>
-          <div class='flex gap-x-5 mb-4'>
-            <%= text_area nil, :message, class: 'form-area', placeholder: 'Describe your appeal'%>
-          </div>
-          <%= button_tag('Send Message', class: 'w-36 contact-me text-white h-12 rounded-full flex items-center justify-center') %>
-        <% end %>
+      <div class='form flex justify-center bg-white p-6 rounded-2xl mr-0 lg:mr-8 invisible animate__animated'>
+        <div id='contact_form_wrapper' class='w-full'>
+          <h2 class='text-5xl full-stack font-bold sm:h-[51px] leading-tight sm:leading-none' id='contact'>
+            Let’s work together!
+          </h2>
+          <p class='mt-4 text-lg md:w-[550px]'>
+            I design and code beautifully simple things and i love what i do. Just simple like that!
+          </p>
+          <%= form_tag('', { data: { controller: "contact-form", action: 'contact-form#sendData:prevent' } }) do |f| %>
+            <div class='flex gap-x-5 my-4'>
+              <%= text_field nil, :first_name, class: 'form-input', placeholder: 'First name'%>
+              <%= text_field nil, :last_name, class: 'form-input', placeholder: 'Last name'%>
+            </div>
+            <div class='flex gap-x-5 mb-4'>
+              <%= text_field nil, :email, class: 'form-input', placeholder: 'Email address'%>
+              <%= text_field nil, :phone_number, class: 'form-input', placeholder: 'Phone number'%>
+            </div>
+            <div class='flex gap-x-5 mb-4'>
+              <%= text_area nil, :message, class: 'form-area', placeholder: 'Describe your appeal'%>
+            </div>
+            <%= button_tag('Send Message', class: 'w-36 contact-me text-white h-12 rounded-full flex items-center justify-center', id: 'contact_form--button') do %>
+              <i class="fa-solid fa-spinner fa-spin mr-2 hidden"></i>Send Message
+            <% end %>
+          <% end %>
+        </div>
+        <div id='contact_form_thanks' class='flex justify-center gap-x-5 items-center hidden'>
+          <i class="fa-regular fa-circle-check fa-2xl" style="color: #19b824;"></i>
+          <p class='font-bold sm:h-[51px] h-full leading-tight sm:leading-none flex items-center'>
+            Thank you for contacting me!
+          </p>
+        </div>
+        <div id='contact_form_error' class='flex justify-center gap-x-5 items-center hidden'>
+          <i class="fa-solid fa-xmark fa-2xl" style="color: #f00505;"></i>
+          <p class='font-bold sm:h-[51px] h-full leading-tight sm:leading-none flex items-center'>
+            Error was occuring, please try again.
+          </p>
+        </div>
       </div>
       <div class='flex items-center justify-center lg:mt-0 mt-8 invisible animate__animated'>
         <div class=''>
