--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
+    <%= favicon_link_tag asset_path('gmail.png') %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
