--- a/app/assets/stylesheets/test.css
+++ b/app/assets/stylesheets/test.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;700&display=swap");
+
 * {
     scrollbar-width: thin;
     scrollbar-color: #8750f7 #2a1454;
