--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,15 +4,14 @@
       <span class='block text-4xl font-bold	mb-4 text-[#2a1454]'>
         I am Maks
       </span>
-      <h1 class='text-6xl max-w-xl full-stack font-bold mb-4'>
+      <h1 class='text-5xl sm:text-6xl max-w-xl full-stack font-bold mb-4'>
         Full Stack Developer
       </h1>
       <div class='w-[300px] h-[350px] sm:w-[450px] sm:h-[550px] ml-auto mr-auto flex items-center mt-14 block md:hidden'>
         <%= image_tag("photo.jpeg", class: 'rounded-3xl rotate-3 hover:rotate-0 transition duration-[300ms]') %>
       </div>
       <p class='text-xl max-w-xl mb-12 font-light'>
-        I break down complex user experience
-        problems to create integritiy focussed solutions that connect billions of people
+        Utilizing the power of Ruby on Rails, ReactJS and other frameworks to build comprehensive web applications
       </p>
       <div class='socials'>
         <ul class='flex items-center'>
@@ -39,19 +38,19 @@
     </div>
   </section>
   <section class='flex items-center justify-around mt-16 mx-[10%]'>
-    <div class='flex'>
-      <span class='block mr-4 font-bold text-6xl text-[#8750f7]'>
+    <div class='flex justify-center items-center'>
+      <span class='block mr-4 font-bold text-4xl sm:text-6xl text-[#8750f7]'>
         5+
       </span>
-      <span class='block flex max-sm:text-l text-lg items-center w-20 text-[#8750f7]'>
+      <span class='block flex sm:text-lg items-center w-20 text-[#8750f7]'>
         Years of Experinece
       </span>
     </div>
-    <div class='flex'>
-      <span class='block mr-4 font-bold text-6xl text-[#8750f7]'>
+    <div class='flex justify-center items-center'>
+      <span class='block mr-4 font-bold text-4xl sm:text-6xl text-[#8750f7]'>
         8
       </span>
-      <span class='block flex text-lg items-center w-20 text-[#8750f7]'>
+      <span class='block flex sm:text-lg items-center w-20 text-[#8750f7]'>
         Completed projects
       </span>
     </div>
@@ -63,46 +62,42 @@
         My Quality Services
       </h2>
       <p class='mt-4 text-lg flex items-center invisible animate__animated'>
-        I put your ideas and thus your wishes in the
-        form
-        of a unique web project that inspires you
-        and you customers.
+        Explore a curated selection of high-quality web application development services that will exceed your expectations
       </p>
     </div>
     <div>
       <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated'>
-        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
+        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[30%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>01</span>
-          <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Backend Development</h3>
+          <h3 class='text-[#8750f7] font-bold sm:text-3xl sm:max-lg:text-2xl text-xl'>Backend Development</h3>
         </div>
-        <div class='flex items-center'>
-          <p class='px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-8'>
-            I break down complex user experinece problems to create integritiy focussed
-            solutions that connect billions of people
+        <div class='pb-4 sm:pb-0 flex items-center sm:w-[70%]'>
+          <p class='px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-14'>
+            Using robust Ruby on Rails framework integrated with PostgreSQL as database and various APIs for building
+            secure and reliable backend
           </p>
         </div>
       </div>
       <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated'>
-        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
+        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[30%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>02</span>
-          <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Frontend Development</h3>
+          <h3 class='text-[#8750f7] font-bold sm:text-3xl sm:max-lg:text-2xl text-xl'>Frontend Development</h3>
         </div>
-        <div class='flex items-center'>
-          <p class='px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-8'>
-            I break down complex user experinece problems to create integritiy focussed
-            solutions that connect billions of people
+        <div class='flex items-center sm:w-[70%]'>
+          <p class='pb-4 sm:pb-0 px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-14'>
+            Creating stunning responsive interfaces utilizing cutting-edge frontend frameworks such as TailwindCSS, Bootstrap, ReactJS or Ruby on Rails frontend stack
+            (Hotwire, Stimulus, Turbo)
           </p>
         </div>
       </div>
       <div class='flex flex-col sm:flex-row border-b-[1px] border-[#dddddd] services invisible animate__animated'>
-        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[40%]'>
+        <div class='flex items-center py-6 sm:py-8 px-6 sm:w-[30%]'>
           <span class='text-[#8750f7] text-2xl font-bold mr-4'>03</span>
-          <h3 class='text-[#8750f7] font-bold sm:text-3xl text-xl'>Deployment & Infrastracture Setup</h3>
+          <h3 class='text-[#8750f7] font-bold sm:text-3xl sm:max-lg:text-2xl text-xl'>Deployment & Infrastracture Setup</h3>
         </div>
-        <div class='flex items-center'>
-          <p class='px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-8'>
-            I break down complex user experinece problems to create integritiy focussed
-            solutions that connect billions of people
+        <div class='flex items-center sm:w-[70%]'>
+          <p class='pb-4 sm:pb-0 px-6 sm:px-8 text-l sm:text-base sm:px-24 ml-14'>
+            Setting up secure and robust cloud hosting provider for seamlessly deploying and maintaining your web application
           </p>
         </div>
       </div>
@@ -116,7 +111,7 @@
             <i class="fa-regular fa-2xl fa-thumbs-up text-[#8750f7]"></i>
           </div>
           <div class='ml-6'>
-            <h2 class='text-3xl sm:text-5xl full-stack font-bold sm:w-[340px] !leading-tight' id='cv'>My Experience</h2>
+            <h2 class='text-3xl sm:text-4xl full-stack font-bold !leading-tight sm:whitespace-nowrap' id='cv'>My Experience</h2>
           </div>
         </div>
         <div class='h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated'>
@@ -146,7 +141,7 @@
             <i class="fa-solid fa-graduation-cap fa-2xl text-[#8750f7]"></i>
           </div>
           <div class='ml-6'>
-            <h2 class='text-3xl sm:text-5xl full-stack font-bold leading-tight !leading-tight'>Education</h2>
+            <h2 class='text-3xl sm:text-4xl full-stack font-bold leading-tight !leading-tight'>Education</h2>
           </div>
         </div>
         <div class='h-[170px] sm:h-[140px] rounded-2xl bg-[#f6f3fc] services my-8 flex flex-col pl-8 justify-center invisible animate__animated'>
@@ -168,11 +163,8 @@
       <h2 class='text-5xl full-stack font-bold !leading-tight' id='skills'>
         My Skills
       </h2>
-      <p class='mt-4 text-lg flex items-center'>
-        I put your ideas and thus your wishes in the
-        form
-        of a unique web project that inspires you
-        and you customers.
+      <p class='mt-4 text-lg flex items-center invisible animate__animated'>
+        Explore my skills, developed through practical experience, covering a wide range of technologies and methods to deliver quality outcomes for your projects
       </p>
     </div>
     <div class='flex gap-6 justify-around flex-wrap'>
@@ -216,10 +208,7 @@
           My Client's Stories
         </h2>
         <p class='mt-4 text-lg flex items-center'>
-          I put your ideas and thus your wishes in the
-          form
-          of a unique web project that inspires you
-          and you customers.
+          Hear directly from my clients about their experiences, showcasing the real impact of our work together
         </p>
       </div>
       <%= tag.div class: "swiper w-[320px] mt-8 lg:mt-0 z-[0!important] invisible animate__animated", data: {
@@ -330,7 +319,7 @@
             Let’s work together!
           </h2>
           <p class='mt-4 text-lg md:w-[550px]'>
-            I design and code beautifully simple things and i love what i do. Just simple like that!
+            Contact me easily through the contact form below to start a conversation about your project needs
           </p>
           <%= form_tag('', { data: { controller: "contact-form", action: 'contact-form#sendData:prevent' } }) do |f| %>
             <div class='flex gap-x-5 my-4'>
@@ -381,7 +370,7 @@
             </div>
             <div class='flex flex-col justify-center'>
               <p>Linkedin</p>
-              <a class='text-sm xl:text-xl md:max-lg:text-xl' href='https://www.linkedin.com/in/maksym-herasevych/'>https://www.linkedin.com/in/maksym-herasevych</a>
+              <a class='text-sm xl:text-xl md:max-lg:text-xl break-all' href='https://www.linkedin.com/in/maksym-herasevych/'>https://www.linkedin.com/in/maksym-herasevych</a>
             </div>
           </div>
         </div>
